// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OffersForm> > renders and matches snapshot 1`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h1
      class="_title_f7961f"
    >
      choose_offer.title
    </h1>
    <p
      class="_subtitle_f7961f"
    >
      choose_offer.watch_this_on_platform
    </p>
    <div
      class="_offerGroupSwitch_f7961f"
    >
      <input
        checked=""
        class="_radio_f7961f"
        id="svod"
        name="selectedOfferType"
        type="radio"
        value="svod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        class="_radio_f7961f"
        id="tvod"
        name="selectedOfferType"
        type="radio"
        value="tvod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="_offers_f7961f"
    >
      <div
        aria-labelledby="title-S916977979_NL"
        class="_offer_f7961f"
      >
        <input
          checked=""
          class="_radio_f7961f"
          data-testid="S916977979_NL"
          id="S916977979_NL"
          name="selectedOfferId"
          type="radio"
          value="S916977979_NL"
        />
        <div
          class="_label_f7961f"
        >
          <label
            for="S916977979_NL"
          >
            <h2
              class="_offerTitle_f7961f"
              id="title-S916977979_NL"
            >
              choose_offer.monthly
            </h2>
            <span
              class="hidden"
            >
              .
            </span>
            <hr
              aria-hidden="true"
              class="_offerDivider_f7961f"
            />
            <ul
              class="_offerBenefits_f7961f"
            >
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.first_periods_free
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.cancel_anytime
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.watch_on_all_devices
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
            </ul>
            <div
              class="_fill_f7961f"
            />
            <div
              class="_offerPrice_f7961f"
            >
              € 6,99
               
              <small>
                /
                periods.month
              </small>
            </div>
          </label>
        </div>
      </div>
      <div
        aria-labelledby="title-S345569153_NL"
        class="_offer_f7961f"
      >
        <input
          class="_radio_f7961f"
          data-testid="S345569153_NL"
          id="S345569153_NL"
          name="selectedOfferId"
          type="radio"
          value="S345569153_NL"
        />
        <div
          class="_label_f7961f"
        >
          <label
            for="S345569153_NL"
          >
            <h2
              class="_offerTitle_f7961f"
              id="title-S345569153_NL"
            >
              choose_offer.yearly
            </h2>
            <span
              class="hidden"
            >
              .
            </span>
            <hr
              aria-hidden="true"
              class="_offerDivider_f7961f"
            />
            <ul
              class="_offerBenefits_f7961f"
            >
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.first_days_free
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.cancel_anytime
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.watch_on_all_devices
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
            </ul>
            <div
              class="_fill_f7961f"
            />
            <div
              class="_offerPrice_f7961f"
            >
              € 50,00
               
              <small>
                /
                periods.year
              </small>
            </div>
          </label>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _primary_f8f296 _fullWidth_f8f296"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<OffersForm> > renders and matches snapshot 2`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h1
      class="_title_f7961f"
    >
      choose_offer.title
    </h1>
    <p
      class="_subtitle_f7961f"
    >
      choose_offer.watch_this_on_platform
    </p>
    <div
      class="_offerGroupSwitch_f7961f"
    >
      <input
        class="_radio_f7961f"
        id="svod"
        name="selectedOfferType"
        type="radio"
        value="svod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        checked=""
        class="_radio_f7961f"
        id="tvod"
        name="selectedOfferType"
        type="radio"
        value="tvod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="_offers_f7961f"
    >
      <div
        aria-labelledby="title-R892134629_NL"
        class="_offer_f7961f"
      >
        <input
          checked=""
          class="_radio_f7961f"
          data-testid="R892134629_NL"
          id="R892134629_NL"
          name="selectedOfferId"
          type="radio"
          value="R892134629_NL"
        />
        <div
          class="_label_f7961f"
        >
          <label
            for="R892134629_NL"
          >
            <h2
              class="_offerTitle_f7961f"
              id="title-R892134629_NL"
            >
              One Time - TVOD offer
            </h2>
            <span
              class="hidden"
            >
              .
            </span>
            <hr
              aria-hidden="true"
              class="_offerDivider_f7961f"
            />
            <ul
              class="_offerBenefits_f7961f"
            >
              <li>
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </svg>
                choose_offer.benefits.watch_on_all_devices
                <span
                  class="hidden"
                >
                  .
                </span>
              </li>
            </ul>
            <div
              class="_fill_f7961f"
            />
            <div
              class="_offerPrice_f7961f"
            >
              € 2,90
               
            </div>
          </label>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _primary_f8f296 _fullWidth_f8f296"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;
